[UPD] First Section

--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
         <main>
             <!-- Start First Section -->
 
-                <div class="sfondo py-20">
+                <div class="small-center sfondo py-20">
                     <div class="intestazioneprincipale">
-
+                        <h1>Il Tuo Posto per parlare</h1>
+                        <p>Che tu faccia parte di un club scolastico, gruppo di gamer , comunita' artistica mondiale, o semplicemente un piccolo gruppo di amici che vuole passare tempo assieme, Discord rende piu' facile chiacchierare ogni giorni e ritrovarsi piu' spesso.</p>
                     </div>
                 </div>
 
