--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                     <img src="./img/item3.svg" alt="">
                 </div>
                 <div class="intestazione-item1 item">
-                    <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
-                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo</p>
+                    <h1>Da pochi a un fandom</h1>
+                    <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
                 </div>
         </div>
 
@@ -99,8 +99,17 @@
             
             <!-- Start Quinta Sezione -->
             <div>
-                <div class="container bg-gray">
-                    <div class="biggest-square border"></div>
+                <div class="bg-gray col py-20 ">
+                    <div class="col-100 text-align">
+                        <h1>Tecnologia affidabile per tenersi in contatto</h1>
+                        <p> Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                    </div>
+                    <div class=" center col-100">
+                        <img src="./img/item4-big.svg" alt="">
+                    </div>
+                    <div class="center col-100 stelle">
+                        <h1 >Pronto a iniziare la tua avventura?</h1>
+                    </div>
                 </div>
             </div>
             
