[UPD] Dont from first to fourth

--- a/index.html
+++ b/index.html
@@ -107,8 +107,15 @@
                     <div class=" center col-100">
                         <img src="./img/item4-big.svg" alt="">
                     </div>
-                    <div class="center col-100 stelle">
-                        <h1 >Pronto a iniziare la tua avventura?</h1>
+                    
+                    <div class="py-20">
+                            <h2 class="center stelle">Pronto a iniziare la tua avventura?</h2>
+                            <div class="center">
+                                <div class="scarica-per-mac">
+                                    &#8595; Scarica per mac
+                                </div>
+                            </div>
+                            
                     </div>
                 </div>
             </div>
@@ -119,7 +126,11 @@
 
             <div>
                 <div class="container center bg-black py-20">
-                    <div class="rectangle border"></div>
+                    <div class="rectangle border">
+                        <h2>Il tuo posto per parlare</h2>
+                        <img src="./img/ita.png" alt="">
+                        <span>Italiano</span>
+                    </div>
                     <div class="rectangle2 border"></div>
                     <div class="rectangle2 border"></div>
                     <div class="rectangle2 border"></div>
