[UPD] Dont last 2 part, have to fix

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <body>
         <nav>
             <div class="container">
-                <div class="logo bg-orange">
+                <div class="logo bg-header">
                     <img src="./img/logo.svg" alt="Logo">
                 </div>
 
-                <div class="links bg-orange">
+                <div class="links bg-header">
                     <ul>
                         <li>
                             <a href="">Scarica</a>
@@ -36,8 +36,8 @@
                     </ul>
                 </div>
 
-                <div class="login bg-orange">
-                    <button id="login-button">Login</button>
+                <div class="login bg-header">
+                    <button class="login-button">Login</button>
                 </div>
             </div>
         </nav>
@@ -72,8 +72,8 @@
 
             <div class="center py-20 space-around">
                 <div class="intestazione-item1 item">
-                    <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
-                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo</p>
+                    <h1>Dove trovarsi e' facile</h1>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente senza dover chiamare</p>
                 </div>
                 <div>
                     <img src="./img/item2.svg" alt="">
@@ -99,7 +99,7 @@
             
             <!-- Start Quinta Sezione -->
             <div>
-                <div class="bg-gray col py-20 ">
+                <div class="bg-gray col py-20 pad-top">
                     <div class="col-100 text-align">
                         <h1>Tecnologia affidabile per tenersi in contatto</h1>
                         <p> Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
@@ -125,28 +125,131 @@
             <!-- Start Sesta Sezione -->
 
             <div>
-                <div class="container center bg-black py-20">
-                    <div class="rectangle border">
-                        <h2>Il tuo posto per parlare</h2>
-                        <img src="./img/ita.png" alt="">
-                        <span>Italiano</span>
+                <div class="d-flex bg-black py-20 just-center">
+                    <div class="mar-top ">
+                        <h1  class="color-blue py-bot">Il tuo posto per parlare</h1>
+                        <img id="ita" src="./img/ita.png" alt="">
+                        <div class="inline-block color-white">Italiano &#9013;</div>
+                        <div class="mar-top">
+                            <i class="fa-brands fa-twitter mar-logo color-white"></i>
+                            <i class="fa-brands fa-instagram mar-logo color-white"></i>
+                            <i class="fa-brands fa-facebook mar-logo color-white"></i>
+                            <i class="fa-brands fa-youtube mar-logo color-white"></i>
+                        </div>
                     </div>
-                    <div class="rectangle2 border"></div>
-                    <div class="rectangle2 border"></div>
-                    <div class="rectangle2 border"></div>
-                    <div class="rectangle2 border"></div>
+                    <div class="py-20 ">
+                        <div class="color-blue ">
+                            Prodotto
+                        </div>
+                        <div class="color-white mar-top">
+                            Scarica
+                        </div>
+                        <div class="color-white mar-top">
+                            Perche' Discord
+                        </div>
+                        <div class="color-white mar-top">
+                            Nitro
+                        </div>
+                        <div class="color-white mar-top">
+                            Sicurezza
+                        </div>
+                        <div class="color-white mar-top">
+                            Assistenza
+                        </div>
+                    </div>
+                    <div class="py-20">
+                        <div class="color-blue ">
+                            Compagnia
+                        </div>
+                        <div class="color-white mar-top">
+                            Chi siamo
+                        </div>
+                        <div class="color-white mar-top">
+                            Lavora con noi
+                        </div>
+                        <div class="color-white mar-top">
+                            Marchio
+                        </div>
+                        <div class="color-white mar-top">
+                            Redezione
+                        </div>
+                        <div class="color-white mar-top">
+                            Negozio
+                        </div>
+                    </div>
+                    <div class="py-20">
+                        <div class="color-blue ">
+                            Prodotto
+                        </div>
+                        <div class="color-white mar-top">
+                            Scarica
+                        </div>
+                        <div class="color-white mar-top">
+                            Perche' Discord
+                        </div>
+                        <div class="color-white mar-top">
+                            Nitro
+                        </div>
+                        <div class="color-white mar-top">
+                            Sicurezza
+                        </div>
+                        <div class="color-white mar-top">
+                            Assistenza
+                        </div>
+                        <div class="color-white mar-top">
+                            Scarica
+                        </div>
+                        <div class="color-white mar-top">
+                            Perche' Discord
+                        </div>
+                        <div class="color-white mar-top">
+                            Nitro
+                        </div>
+                        <div class="color-white mar-top">
+                            Sicurezza
+                        </div>
+                        <div class="color-white mar-top">
+                            Assistenza
+                        </div>
+                    </div>
+                    <div class="py-20">
+                        <div class="color-blue ">
+                            Norme
+                        </div>
+                        <div class="color-white mar-top">
+                            Scarica
+                        </div>
+                        <div class="color-white mar-top">
+                            Perche' Discord
+                        </div>
+                        <div class="color-white mar-top">
+                            Nitro
+                        </div>
+                        <div class="color-white mar-top">
+                            Sicurezza
+                        </div>
+                        <div class="color-white mar-top">
+                            Assistenza
+                        </div>
+                    </div>
                 </div>
             </div>
 
         </main>
+
+       
         <!-- End Sesta Sezione -->
 
         <!-- Start Footer -->
-
+        <div class="bg-black container">
+            <hr>
+        </div>
         <footer class="bg-black">
-            <div class="footer-dim bg-aquamarine">
-                <span class="button border"> Logo </span>
-                <span class="button border"> Bottone </span>
+            <div class="footer-dim">
+                <span class="  logo">
+                    <img src="./img/logo.svg" alt="">
+                </span>
+                <button class="login-button">Accedi</button>
             </div>
         </footer>
 
