--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     
     <title>Discord</title>
@@ -126,7 +129,7 @@
 
             <div>
                 <div class="d-flex bg-black py-20 just-center">
-                    <div class="mar-top ">
+                    <div class="mar-top align-center big-col">
                         <h1  class="color-blue py-bot">Il tuo posto per parlare</h1>
                         <img id="ita" src="./img/ita.png" alt="">
                         <div class="inline-block color-white">Italiano &#9013;</div>
@@ -137,7 +140,7 @@
                             <i class="fa-brands fa-youtube mar-logo color-white"></i>
                         </div>
                     </div>
-                    <div class="py-20 ">
+                    <div class="py-20 small-col">
                         <div class="color-blue ">
                             Prodotto
                         </div>
@@ -157,7 +160,7 @@
                             Assistenza
                         </div>
                     </div>
-                    <div class="py-20">
+                    <div class="py-20 small-col">
                         <div class="color-blue ">
                             Compagnia
                         </div>
@@ -177,7 +180,7 @@
                             Negozio
                         </div>
                     </div>
-                    <div class="py-20">
+                    <div class="py-20 small-col">
                         <div class="color-blue ">
                             Prodotto
                         </div>
@@ -212,7 +215,7 @@
                             Assistenza
                         </div>
                     </div>
-                    <div class="py-20">
+                    <div class="py-20 small-col">
                         <div class="color-blue ">
                             Norme
                         </div>
