[DONE] done have to fix minor things

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <nav>
-            <div class="container">
+            <div class="container d-flex">
                 <div class="logo bg-header">
                     <img src="./img/logo.svg" alt="Logo">
                 </div>
@@ -238,15 +238,17 @@
                 </div>
             </div>
 
+            <div class="bg-black">
+                <div class="container">
+                    <hr class="bordo-blue">
+                </div>
+            </div>
         </main>
 
        
         <!-- End Sesta Sezione -->
 
         <!-- Start Footer -->
-        <div class="bg-black container">
-            <hr>
-        </div>
         <footer class="bg-black">
             <div class="footer-dim">
                 <span class="  logo">
