--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div>
                         <img src="./img/item1.svg" alt="">
                     </div>
-                    <div class="intestazione-item1 item">
+                    <div class="intestazione-item1 item ">
                         <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
                         <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo</p>
                     </div>
@@ -73,7 +73,7 @@
 
             <!-- Start Third Sezione -->
 
-            <div class="center py-20 space-around">
+            <div class="center py-20 space-around bg-gray">
                 <div class="intestazione-item1 item">
                     <h1>Dove trovarsi e' facile</h1>
                     <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente senza dover chiamare</p>
