[DONE/FIX] Done still problem on fifth section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
 
                 <div class="login bg-header">
-                    <button class="login-button">Login</button>
+                    <button class="login-button">Accedi</button>
                 </div>
             </div>
         </nav>
@@ -66,7 +66,7 @@
                     </div>
                     <div class="intestazione-item1 item ">
                         <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
-                        <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo</p>
+                        <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
                     </div>
             </div>
             <!-- End Second Section !-->
@@ -76,7 +76,7 @@
             <div class="center py-20 space-around bg-gray">
                 <div class="intestazione-item1 item">
                     <h1>Dove trovarsi e' facile</h1>
-                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente senza dover chiamare</p>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente senza dover chiamare.</p>
                 </div>
                 <div>
                     <img src="./img/item2.svg" alt="">
@@ -102,10 +102,10 @@
             
             <!-- Start Quinta Sezione -->
             <div>
-                <div class="bg-gray col py-20 pad-top">
+                <div class="bg-gray pad-top col-100">
                     <div class="col-100 text-align">
                         <h1>Tecnologia affidabile per tenersi in contatto</h1>
-                        <p> Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                        <p> Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda <br> gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                     </div>
                     <div class=" center col-100">
                         <img src="./img/item4-big.svg" alt="">
@@ -114,9 +114,9 @@
                     <div class="py-20">
                             <h2 class="center stelle">Pronto a iniziare la tua avventura?</h2>
                             <div class="center">
-                                <div class="scarica-per-mac">
+                                <button class="scarica-per-mac">
                                     &#8595; Scarica per mac
-                                </div>
+                                </button>
                             </div>
                             
                     </div>
@@ -254,7 +254,7 @@
                 <span class="  logo">
                     <img src="./img/logo.svg" alt="">
                 </span>
-                <button class="login-button">Accedi</button>
+                <button class="login-button scarica-per-mac">Accedi</button>
             </div>
         </footer>
 
