[UPD] Add button on top and cleaner css

--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
                         <p>Che tu faccia parte di un club scolastico, gruppo di gamer , comunita' artistica mondiale, o semplicemente un piccolo gruppo di amici che vuole passare tempo assieme, Discord rende piu' facile chiacchierare ogni giorni e ritrovarsi piu' spesso.</p>
                     </div>
                 </div>
+                <div class="small-center mar-top d-flex">
+                    <button class="scarica-per-mac-top button">
+                        &#8595; Scarica per mac
+                    </button>
+                    <button class="button mar-left" id="button-header">
+                        Apri Discord nel tuo browser
+                    </button>
+                </div>
             </div>
 
             <!-- End First Section -->
@@ -73,12 +81,12 @@
 
             <!-- Start Third Sezione -->
 
-            <div class="center py-20 space-around bg-gray">
+            <div class="center py-20 bg-gray">
                 <div class="intestazione-item1 item">
                     <h1>Dove trovarsi e' facile</h1>
                     <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente senza dover chiamare.</p>
                 </div>
-                <div>
+                <div class="mar-left">
                     <img src="./img/item2.svg" alt="">
                 </div>
                 
