[FIX] Sixth section

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <div class="py-20">
                             <h2 class="center stelle">Pronto a iniziare la tua avventura?</h2>
                             <div class="center">
-                                <button class="scarica-per-mac">
+                                <button class="scarica-per-mac-bot button">
                                     &#8595; Scarica per mac
                                 </button>
                             </div>
@@ -136,16 +136,16 @@
             <!-- Start Sesta Sezione -->
 
             <div>
-                <div class="d-flex bg-black py-20 just-center">
-                    <div class="mar-top align-center big-col">
+                <div class="d-flex bg-black py-20">
+                    <div class=" big-col">
                         <h1  class="color-blue py-bot">Il tuo posto per parlare</h1>
                         <img id="ita" src="./img/ita.png" alt="">
                         <div class="inline-block color-white">Italiano &#9013;</div>
                         <div class="mar-top">
                             <i class="fa-brands fa-twitter mar-logo color-white"></i>
-                            <i class="fa-brands fa-instagram mar-logo color-white"></i>
-                            <i class="fa-brands fa-facebook mar-logo color-white"></i>
-                            <i class="fa-brands fa-youtube mar-logo color-white"></i>
+                            <i class="fa-brands fa-instagram mar-logo color-white margin-logo"></i>
+                            <i class="fa-brands fa-facebook mar-logo color-white margin-logo"></i>
+                            <i class="fa-brands fa-youtube mar-logo color-white margin-logo"></i>
                         </div>
                     </div>
                     <div class="py-20 small-col">
