--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 
             <!-- Start Sesta Sezione -->
 
-            <div>
-                <div class="d-flex bg-black py-20">
+            <div class="bg-black ">
+                <div class="d-flex container py-20">
                     <div class=" big-col">
                         <h1  class="color-blue py-bot">Il tuo posto per parlare</h1>
                         <img id="ita" src="./img/ita.png" alt="">
